--- a/index.html
+++ b/index.html
@@ -86,24 +86,11 @@
         background: #020617;
       }
       ::-webkit-scrollbar-thumb {
-        background: #475569;
+        background: #334155;
         border-radius: 2px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #DBB62B;
-      }
-
-      /* Global Noise Texture */
-      .bg-noise {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        z-index: 40;
-        opacity: 0.05;
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
       }
 
       /* Typography Utilities */
@@ -125,6 +112,10 @@
         cursor: default;
         overflow-x: hidden;
         background-color: #020617;
+        /* Luxuoso Gradiente de Fundo (Spotlight Effect) */
+        background-image: radial-gradient(circle at 50% -20%, #1e293b 0%, #020617 50%, #000000 100%);
+        background-attachment: fixed;
+        background-repeat: no-repeat;
       }
     </style>
   <script type="importmap">
@@ -141,8 +132,7 @@
 }
 </script>
 </head>
-  <body class="bg-navy-950 text-slate-200 antialiased overflow-x-hidden selection:bg-gold-500 selection:text-navy-950">
-    <div class="bg-noise"></div>
+  <body class="text-slate-200 antialiased overflow-x-hidden selection:bg-gold-500 selection:text-navy-950">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
